# SaisunBox

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.bash
config/: cameraParameter.yml  config.yaml  right.xml
include/saisun_driver/: ros_wrapper.h  saisun_state.h
launch/: saisun_driver.launch
saisun_hw/: CMakeLists.txt  package.xml
saisun_hw/config/: config.yaml
saisun_hw/include/saisun_driver/: ros_wrapper.h  saisun_com.h  saisun_state.h
saisun_hw/include/saisun_hw/: ros_wrapper.h  saisun_com.h
saisun_hw/launch/: saisun_driver.launch.py  saisun_hw.launch  setup.py
saisun_hw/src/: ros_wrapper.cpp  saisun_com.cpp  saisun_state.cpp
saisun_hw/test/: vision_server.cpp
saisun_msgs/: CMakeLists.txt  package.xml
saisun_msgs/action/: GetResult.action  Initial.action  Trigger.action
saisun_msgs/msg/: ObjectPose.msg  RobotPose.msg
saisun_msgs/srv/: VisionAlgorithm.srv
src/: ros_wrapper.cpp  saisun_com.cpp  saisun_state.cpp
src/sensing/: CMakeLists.txt  package.xml
src/sensing/config/camera_configs/c7018326285_boxpicking/config/: left.xml  right.xml
src/sensing/include/sensing/: SensingServer.hpp
src/sensing/lib/smarteye/: VERSION_SmarteyeAPI.txt  common_type.h
src/sensing/lib/smarteye/lib/: libgdk-x11-2.0.so.0  libpango-1.0.so.0
src/sensing/script/box/: box_detection.py  box_io.py  collision.py  config.py  depth_convert.py  detect_interface.py  edge_detection.py  example.py  example_BOX_PICKING.py  example_for_UNSTACK.py  example_unstack.py  grasp_selection.py  pose.py  requirements.txt  segment.py  stack_detection.py  visualize.py
src/sensing/src/: test.cpp
src/sensing/src/sensing/: BoxLocalizationAlgo.cpp  FakeCameraController.cpp  SensingServer.cpp  SmartEyeCameraController.cpp
vision_algorithm/: .gitmodules  README.md  requirements.txt  setup.bash
vision_algorithm/config/: cameraViewFile.txt  left.xml  reconRoiParameter.yml
vision_algorithm/log/: latest_list
vision_algorithm/src/sensing/: CMakeLists.txt  package.xml
vision_algorithm/src/sensing/config/camera_configs/c7018326285_boxpicking/config/: cameraParameter.yml
vision_algorithm/src/sensing/include/sensing/: BoxLocalizationAlgo.hpp  CameraController.hpp  CameraModel.hpp  FakeCameraController.hpp  RegionOfInterest.hpp  SensingServer.hpp  SmartEyeCameraController.hpp  Utils.hpp
vision_algorithm/src/sensing/lib/smarteye/: ProcessController.h
vision_algorithm/src/sensing/lib/smarteye/lib/: GxU3VTL.cti  libglib-2.0.so.0  libgobject-2.0.so.0  libpangoft2-1.0.so.0  libthai.so.0
vision_algorithm/src/sensing/script/box/: README.md  box_detection.py  config.py  conversion.py  detect_interface.py  edge_detection.py  edge_points.txt  edge_pts.txt  example_BOX_PICKING.py  example_box.py  example_for_UNSTACK.py  example_unstack.py  grasp_selection.py  pcl2_img.py  pose.py  read_points.py  requirements.txt  segment.py  stack_detection.py  test.py  vision_server.py
vision_algorithm/src/sensing/src/: saved_data.cpp  test.cpp  vision_node.cpp
vision_algorithm/src/sensing/src/sensing/: BoxLocalizationAlgo.cpp  FakeCameraController.cpp  SensingServer.cpp  SmartEyeCameraController.cpp
vision_server/: package.xml  setup.cfg  setup.py
vision_server/vision_server/: minial_srv.py  vision_server.py
